Fix navbar alignment

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -136,6 +136,7 @@ select {
     flex: 1 0 auto;
     justify-content: space-around;
     margin-right: 50px;
+    margin-bottom: 7px;
 }
 
 .menu-block {
